--- a/modules/classregisters/client/views/form-classregister.client.view.html
+++ b/modules/classregisters/client/views/form-classregister.client.view.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="modal-body" id="modal-body">
-    <div class="container col-md-12">
+    <!--<div class="container">-->
        
             <!--<div class="form-group" show-errors>
           <label class="control-label" for="name">Name</label>
@@ -40,7 +40,7 @@
             <p class="help-block error-text" ng-message="required">Classregister name is required.</p>
           </div>
         </div>-->
-            <div  style="margin-bottom: 5px;">
+            <div class="row margin-bottom">
                 <label class="col-md-2"> Date Of Register</label>
                 <div class="col-md-4">
                     <p class="input-group">
@@ -59,8 +59,8 @@
                 </div>
             </div>
 
-            <div >
-            <div style="paddin-bottom: 10px;" class="col-md-6">
+            <div class="row">
+            <div class="col-md-12 margin-bottom">
 
 
                 <table class="table table-bordered table-hover table-condensed">
@@ -93,7 +93,7 @@
             </div>
                 </div>
         
-    </div>
+  <!--  </div>-->
 </div>
 
 <div class="modal-footer">
