--- a/modules/mediaresources/client/views/form-mediaresource.client.view.html
+++ b/modules/mediaresources/client/views/form-mediaresource.client.view.html
@@ -87,7 +87,25 @@
     </div>
     
     <div class="col-md-3 right-side"  >
-    the other side
+    <form class="signin form-horizontal">
+      <fieldset>
+        <div class="form-group text-center">
+          <img ng-src="{{vm.mediaresource.attachment}}" alt="{{vm.mediaresource.alttext}}" class="img-thumbnail user-profile-picture">
+        </div>
+        <div class="text-center form-group" ng-hide="vm.uploader.queue.length">
+          <span class="btn btn-default btn-file">
+              Select Image <input type="file" nv-file-select uploader="vm.uploader">
+          </span>
+        </div>
+        <div class="text-center form-group" ng-show="vm.uploader.queue.length">
+          <button class="btn btn-primary" ng-click="vm.uploadMedeiaResource();">Upload</button>
+          <button class="btn btn-default" ng-click="vm.cancelUpload();">Cancel</button>
+        </div>
+        <div ng-show="success" class="text-center text-success">
+          <strong>Profile Picture Changed Successfully</strong>
+        </div>
+        </fieldset>
+        </form>
     </div>
         </div>
 </div>
