--- a/modules/mediaresources/client/views/form-mediaresource.client.view.html
+++ b/modules/mediaresources/client/views/form-mediaresource.client.view.html
@@ -101,7 +101,7 @@
           <button class="btn btn-primary" ng-click="vm.uploadMedeiaResource();">Upload</button>
           <button class="btn btn-default" ng-click="vm.cancelUpload();">Cancel</button>
         </div>
-        <div ng-show="success" class="text-center text-success">
+        <div ng-show="vm.success" class="text-center text-success">
           <strong>Profile Picture Changed Successfully</strong>
         </div>
         </fieldset>
